--- a/VideoPlayer.css
+++ b/VideoPlayer.css
@@ -20,7 +20,9 @@ iframe
 
 video
 {
-	width: 100%;
+	width: 100% !important;
+	height: 100% !important;
+	max-height: 56.25vw !important;
 }
 
 .overlay1
