--- a/VideoPlayer/VideoPlayer.css
+++ b/VideoPlayer/VideoPlayer.css
@@ -1,3 +1,11 @@
+/*
+	VideoPlayer.css
+	CSS3 styles for managing the VideoPlayer control.
+
+	Copyright (c). 2020 Daniel Patterson, MCSD (danielanywhere)
+	Released for public access under the MIT License.
+	http://www.opensource.org/licenses/mit-license.php
+*/
 body
 {
 	font-family: Calibri, Verdana, Geneva, Tahoma, sans-serif;
@@ -8,6 +16,12 @@ blockquote
 {
 	background-color: #fdfdef;
 	padding: 8px;
+}
+
+canvas
+{
+	border: 2px solid black;
+	background-color: cornflowerblue;
 }
 
 iframe
@@ -23,6 +37,13 @@ video
 	width: 100% !important;
 	height: 100% !important;
 	max-height: 56.25vw !important;
+}
+
+.overlay-template
+{
+	border: 2px solid white;
+	display: inline-block;
+	position: absolute;
 }
 
 .overlay1
